# nexus-intelligence

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
data/seed/mysql/: schema.sql  seed.sql
data/seed/postgres/: schema.sql  seed.sql
services/federation/: pyproject.toml
