[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-federation"
version = "0.1.0"
description = "Content Federation Service for Nexus Intelligence"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "redis[hiredis]>=5.0.5",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.1",
    "mcp>=1.0.0",
    "nexus-types",
    "loguru>=0.7.2",
]

[tool.uv.sources]
nexus-types = { path = "../../packages/shared-types", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/federation"]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "ruff>=0.5.0",
]
